# ZIA

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  setup.sh  test_php_cgi.sh
Certificate/: certificate.pm
Zia/include/: Utils.hpp  Zia.hpp
Zia/src/: Zia.cpp  main.cpp
ZiaApi/: .gitignore  Doxyfile  LICENSE  readme.md
ZiaApi/Tests/: CMakeLists.txt  main.cpp  peda-session-6331.txt  peda-session-unknown.txt  readme.md  tests.sh
ZiaApi/Tests/Context/: tests.cpp
ZiaApi/Tests/Entity/: tests.cpp
ZiaApi/Tests/Event/: tests.cpp
ZiaApi/Tests/Orchestrator/: SimpleModule.cpp  SimpleParserModule.cpp  tests.cpp  testsLoader.cpp
ZiaApi/Tests/Pipeline/: tests.cpp
ZiaApi/Tests/ThreadPool/: tests.cpp
ZiaApi/doc/html/: _context_8hpp.html  _context_8hpp__dep__incl.map  _context_8hpp__dep__incl.md5  _context_8hpp__incl.map  _context_8hpp__incl.md5  _context_8hpp_source.html  _entity_8hpp_source.html  _event_2_event_8hpp_source.html  _event_8hpp_source.html  _hdl_collector_8hpp_source.html  _http_base_8hpp_source.html  _http_header_8hpp_source.html  _http_request_8hpp_source.html  _loader_8hpp_source.html  _manager_8hpp_source.html  _mutable_stream_8hpp_source.html  _orchestrator_8hpp_source.html  _pipeline_8hpp.html  _pipeline_8hpp.js  _pipeline_8hpp__dep__incl.map  _pipeline_8hpp__dep__incl.md5  _pipeline_8hpp__incl.map  _pipeline_8hpp__incl.md5  _pipeline_8hpp_source.html  _platform_8hpp_source.html  _property_8hpp_source.html  _thread_pool_8hpp_source.html  _zany_8hpp_source.html  annotated.html  annotated_dup.js  classes.html  classzany_1_1_abstract_data-members.html  classzany_1_1_abstract_data.html  classzany_1_1_abstract_data.js  classzany_1_1_abstract_data__inherit__graph.map  classzany_1_1_abstract_data__inherit__graph.md5  classzany_1_1_array-members.html  classzany_1_1_array.html  classzany_1_1_array.js  classzany_1_1_array__coll__graph.md5  (+241 more)
ZiaApi/doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  enums_0.js  enums_1.js  files_0.js  files_1.js  functions_1.js  functions_4.js  functions_5.js  functions_6.js  searchdata.js  variables_0.js  variables_1.js
ZiaApi/doc/latex/: _context_8hpp.tex  _context_8hpp__dep__incl.md5  _context_8hpp__incl.md5  _pipeline_8hpp.tex  _pipeline_8hpp__dep__incl.md5  _pipeline_8hpp__incl.md5  annotated.tex  classzany_1_1_abstract_data.tex  classzany_1_1_abstract_data__inherit__graph.md5  classzany_1_1_array.tex  classzany_1_1_array__coll__graph.md5  classzany_1_1_array__inherit__graph.md5  classzany_1_1_bool.tex  classzany_1_1_bool__coll__graph.md5  classzany_1_1_bool__inherit__graph.md5  classzany_1_1_context.tex  classzany_1_1_context__coll__graph.md5  classzany_1_1_context__inherit__graph.md5  classzany_1_1_entity.tex  classzany_1_1_http_header.tex  classzany_1_1_interface_context.tex  classzany_1_1_interface_context__inherit__graph.md5  classzany_1_1_loader.tex  classzany_1_1_loader_1_1_abstract_module.tex  classzany_1_1_loader_1_1_abstract_module_1_1_collector.tex  classzany_1_1_loader_1_1_abstract_module__coll__graph.md5  classzany_1_1_loader_1_1_iterator.tex  classzany_1_1_loader_1_1_iterator__coll__graph.md5  classzany_1_1_loader_1_1_iterator__inherit__graph.md5  classzany_1_1_network_i_o.tex  classzany_1_1_network_stream_buf.tex  classzany_1_1_network_stream_buf__coll__graph.md5  classzany_1_1_network_stream_buf__inherit__graph.md5  classzany_1_1_null.tex  classzany_1_1_null__coll__graph.md5  classzany_1_1_null__inherit__graph.md5  classzany_1_1_number.tex  classzany_1_1_number__coll__graph.md5  classzany_1_1_number__inherit__graph.md5  classzany_1_1_object.tex  (+51 more)
ZiaApi/doc/man/man3/: Context.hpp.3  Pipeline.hpp.3  _home_guilhem_CPP_Zia_api_lib_.3  _home_guilhem_CPP_Zia_api_lib_Zany_.3  _home_guilhem_CPP_Zia_api_lib_Zany_Event_.3  zany.3  zany_AbstractData.3  zany_Array.3  zany_Bool.3  zany_Context.3  zany_Entity.3  zany_HttpBaseRequest.3  zany_HttpHeader.3  zany_HttpRequest.3  zany_HttpResponse.3  zany_InterfaceContext.3  zany_Loader.3  zany_Loader_AbstractModule.3  zany_Loader_AbstractModule_Collector.3  zany_Loader_Iterator.3  zany_NetworkIO.3  zany_NetworkStreamBuf.3  zany_Null.3  zany_Number.3  zany_Object.3  zany_Orchestrator.3  zany_Pipeline.3  zany_Pipeline_Hooks.3  zany_Property.3  (+18 more)
ZiaApi/lib/: Zany.hpp
ZiaApi/lib/Zany/: Connection.hpp  Context.hpp  Context.ipp  Entity.hpp  Entity.ipp  Event.hpp  HttpBase.hpp  HttpHeader.hpp  HttpHeader.ipp  Loader.hpp  Loader.ipp  Orchestrator.hpp  Orchestrator.ipp  Pipeline.hpp  Pipeline.ipp  Platform.hpp  Property.hpp  ThreadPool.hpp  ThreadPool.ipp
assets/: index.html
assets/PHPForm/: index.html  verif.php
assets/php/: hello_world.php
cgi/php-cgi-windows/: pharcommand.phar  snapshot.txt
config/: default-config.json  linux-config.json  ssl-config.json  zia-config.json
documents/: Zia_RFC.html
httpServer/include/: Connection.hpp  ConnectionManager.hpp  RequestHandler.hpp  RequestParser.hpp  Server.hpp  connection.hpp  connection_manager.hpp  header.hpp  mime_types.hpp  param.hpp  reply.hpp  request.hpp  request_handler.hpp  request_parser.hpp  server.hpp
httpServer/src/: ConnectionManager.cpp  RequestHandler.cpp  RequestParser.cpp  Server.cpp  Zia.cpp  connection.cpp  connection_manager.cpp  main.cpp  mime_types.cpp  reply.cpp  request_handler.cpp  request_parser.cpp  server.cpp
moduleApi/include/: AppendModule.hpp  ConfigParser.hpp  IModule.hpp  PhpCgiModule.hpp  moduleManager.hpp  test.sh
moduleApi/src/: ConfigParser.cpp  moduleManager.cpp
modules/ConfigParser/: ConfigParser.cpp  ConfigParser.hpp
modules/Connection/: ConnectionModule.cpp
modules/HttpServer/: HttpServer.cpp  HttpServer.hpp
modules/Params/: Params.cpp  Params.hpp
modules/PhpCgi/: PhpCgi.cpp  PhpCgi.hpp
modules/SslConnection/: Listener.hpp  SslConnectionModule.cpp
server/include/: server.hpp
server/sources/: main.cpp
(+6 files in other folders)
